zta/microservice1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zta-microservice1
spec:
  selector:
    app: zta-microservice1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
